Make the Chef username configurable

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,6 +4,7 @@ logger.root=ERROR
 logger.play=INFO
 logger.application=DEBUG
 # MH specific stuff
-application.chef.endpoint="cheflocal"
+application.chef.endpoint="cheflocal-at-build"
+application.chef.user="fclausen"
 application.chef.pemfile="/Users/fclausen/.chef/fclausen.pem"
 application.chef.databag="shibboleth-sp"
